--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,63 +1,73 @@
 ---
-interface Props {
-	title: string;
-	body: string;
-	href: string;
-}
-
-const { href, title, body } = Astro.props;
+const { cardTitle, cardImage } = Astro.props
 ---
 
-<li class="link-card">
-	<a href={href}>
-		<h2>
-			{title}
-			<span>&rarr;</span>
-		</h2>
-		<p>
-			{body}
-		</p>
-	</a>
-</li>
-<style>
-	.link-card {
-		list-style: none;
-		display: flex;
-		padding: 0.25rem;
-		background-color: white;
-		background-image: none;
-		background-size: 400%;
-		border-radius: 0.6rem;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
-	}
+<article class="card grid lg:grid lg:grid-cols-11 lg:col-span-11">
+    <div class="card__left col-span-5 p-5 pb-8 pl-8">
+        <h3 class="mb-4">{cardTitle}</h3>
+        <div class="card__description">
+            <slot />
+        </div>
+    </div>
+    <img src={cardImage} alt={cardTitle} class="card__image col-span-6" width=800 />
+</article>
 
-	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: 1rem 1.3rem;
-		border-radius: 0.35rem;
-		color: #111;
-		background-color: white;
-		opacity: 0.8;
-	}
-	h2 {
-		margin: 0;
-		font-size: 1.25rem;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-	p {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
-		color: #444;
-	}
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-		background-image: var(--accent-gradient);
-	}
-	.link-card:is(:hover, :focus-within) h2 {
-		color: rgb(var(--accent));
-	}
+<style lang="scss">
+    @import "../style/_variables.scss";
+
+    .card {
+        margin-left: var(--gap);
+
+        &:not(:last-of-type) {
+            margin-bottom: 2.5rem;
+        }
+
+        &__left {
+            background-color: $darkbrown;
+            margin-bottom: auto;
+            border-top-left-radius: 20px;
+            border-bottom-left-radius: 70px;
+            position: relative;
+
+            h3 {
+                font-family: $headline-font;
+                color: $orange;
+                line-height: 1;
+                font-weight: 900;
+                font-size: 2.5rem;
+                text-transform: uppercase;
+            }
+
+            .card__description {
+                font-size: 1.125rem;
+                
+                p + p {
+                    margin-top: 0.75rem;
+                }
+            }
+
+            &::after { 
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 100%;
+                width: 100px;
+                height: 100px;
+                background-color: $darkbrown;
+                z-index: -1;
+            }
+            
+            &::before { 
+                content: url('/assets/svg/inverted-radius.svg');
+                position: absolute;
+                top: 100%;
+                right: 0;
+            }
+        }
+
+        img {
+            border: 20px solid $darkbrown;
+            border-radius: 40px 190px 40px 80px;
+        }
+    }
 </style>
