--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,15 +1,19 @@
 ---
-const { cardTitle, cardImage } = Astro.props
+const { cardTitle, cardImage, ratioW, ratioH } = Astro.props
+
+const aspectRatio = {
+    aspectRatio: `${ratioW}/${ratioH}`
+}
 ---
 
 <article class="card grid lg:grid lg:grid-cols-11 lg:col-span-11">
-    <div class="card__left col-span-5 p-5 pb-8 pl-8">
+    <div class="card__left col-span-5 pt-5 pb-16 pl-8">
         <h3 class="mb-4">{cardTitle}</h3>
         <div class="card__description">
             <slot />
         </div>
     </div>
-    <img src={cardImage} alt={cardTitle} class="card__image col-span-6" width=800 />
+    <img src={cardImage} alt={cardTitle} class="card__image col-span-6" style={aspectRatio} />
 </article>
 
 <style lang="scss">
@@ -19,7 +23,7 @@ const { cardTitle, cardImage } = Astro.props
         margin-left: var(--gap);
 
         &:not(:last-of-type) {
-            margin-bottom: 2.5rem;
+            margin-bottom: 4.5rem;
         }
 
         &__left {
@@ -40,10 +44,6 @@ const { cardTitle, cardImage } = Astro.props
 
             .card__description {
                 font-size: 1.125rem;
-                
-                p + p {
-                    margin-top: 0.75rem;
-                }
             }
 
             &::after { 
@@ -61,13 +61,14 @@ const { cardTitle, cardImage } = Astro.props
                 content: url('/assets/svg/inverted-radius.svg');
                 position: absolute;
                 top: 100%;
-                right: 0;
+                right: -1px;
             }
         }
 
         img {
             border: 20px solid $darkbrown;
             border-radius: 40px 190px 40px 80px;
+            object-fit: cover;
         }
     }
 </style>
