--- a/src/components/accordeon/AccordeonHeader.astro
+++ b/src/components/accordeon/AccordeonHeader.astro
@@ -31,7 +31,7 @@ const { title, icon } = Astro.props
                                 content: url('/public/assets/svg/inverted-radius.svg');
                                 position: absolute;
                                 top: 100%;
-                                right: 0;
+                                right: -1px;
                         }
                 }
 
