--- a/src/pages/algemene-voorwaarden.astro
+++ b/src/pages/algemene-voorwaarden.astro
@@ -5,9 +5,9 @@ const title = 'Algemene voorwaarden';
 const description = 'Algemene voorwaarden van Elektro repair Mortsel';
 ---
 <Layout description={description} title={title}>         
-    <div class="container grid grid-cols-12 lg:gap-10 auto-rows-auto">
-        <div class="col-span-8 flex flex-col">
-                <h1 class="text-4xl sm:text-6xl mb-12">Algemene voorwaarden</h1>
+    <div class="container grid grid-cols-12">
+        <div class="col-span-12 md:col-span-8 flex flex-col">
+                <h1 class="mb-12">Algemene voorwaarden</h1>
                 <div>
                         <h2>Kosten</h2>
                         <p>Werkuren worden aangerekend per begonnen half uur, met een minimum van 1 uur.</p>
