--- a/src/pages/cookie-policy.astro
+++ b/src/pages/cookie-policy.astro
@@ -6,8 +6,8 @@ const description = 'Cookie policy van Elektro repair Mortsel';
 ---
 <Layout description={description} title={title}>         
     <div class="container grid grid-cols-12 lg:gap-10 auto-rows-auto">
-        <div class="col-span-8 flex flex-col">
-                <h1 class="text-4xl sm:text-6xl mb-12">Cookie policy</h1>
+        <div class="col-span-12 md:col-span-8 flex flex-col">
+                <h1 class="mb-12">Cookie policy</h1>
                 <div>
                         <h2>1. Wat zijn cookies?</h2>
                         <p>Cookies zijn kleine tekstbestanden die op uw apparaat worden geplaatst wanneer u onze website bezoekt. Ze worden vaak gebruikt om informatie te verzamelen over hoe bezoekers met een website omgaan, om de website beter te laten functioneren en om de gebruikerservaring te verbeteren.</p>
