--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,26 +1,23 @@
----
-import { Icon } from 'astro-icon'
----
-
-
 <footer>
-    <div class="container grid grid-cols-12 lg:gap-5 items-start pt-4 pb-6">
-        <div class="logo logo--footer col-span-4">
+    <div class="container flex flex-col sm:grid sm:grid-cols-12 gap-5 items-start pt-4 pb-6">
+        <div class="logo logo--footer sm:col-span-7 md:col-span-4 lg:col-span-5 xl:col-span-4">
             <a href="/">Elektro repair Mortsel</a>
         </div>
-        <div class="contact-info-1 col-span-3 flex flex-col">
-            <a class="mb-4" href="tel:0497656751"><i class="fa-solid fa-phone mr-2"></i> 0497 65 67 51</a>
-            <a href="mailto:info@elektrorepairmortsel.be"><i class="fa-solid fa-envelope mr-2"></i> info@elektrorepairmortsel.be</a>
-        </div> 
-        <div class="contact-info-2 col-span-3 flex">
-            <i class="fa-solid fa-location-dot mt-1 mr-4"></i> 
-            <div>
-                Elektro repair Mortsel<br>
-                Sint-Annalei 15<br>
-                2640 Mortsel
+        <div class="flex flex-col sm:col-span-5 md:mt-auto xl:mt-0 md:grid md:col-span-8 md:grid-cols-8 lg:col-span-7 lg:grid-cols-7 xl:col-span-6 xl:grid-cols-6">
+            <div class="contact-info-1 md:mt-auto xl:mt-0 md:col-span-4 xl:col-span-3 flex flex-col">
+                <a class="mb-4" href="tel:0497656751"><i class="fa-solid fa-phone mr-2"></i> 0497 65 67 51</a>
+                <a class="mb-4 md:mb-0" href="mailto:info@elektrorepairmortsel.be"><i class="fa-solid fa-envelope mr-2"></i> info@elektrorepairmortsel.be</a>
+            </div> 
+            <div class="contact-info-2 md:mt-auto xl:mt-0 md:col-span-4 lg:col-span-3 flex">
+                <i class="fa-solid fa-location-dot mt-1 mr-4"></i> 
+                <div>
+                    Elektro repair Mortsel<br>
+                    Sint-Annalei 15<br>
+                    2640 Mortsel
+                </div>
             </div>
         </div>
-        <div class="col-span-2 footer-links">
+        <div class="sm:col-span-5 sm:col-start-8 md:col-span-12 ml-8 xl:ml-0 xl:col-span-2 footer-links">
             <a href="/algemene-voorwaarden" class="mb-2">Algemene voorwaarden</a>
             <a href="/cookie-policy">Cookie policy</a>
         </div>
