--- a/src/components/accordeon/AccordeonContent.astro
+++ b/src/components/accordeon/AccordeonContent.astro
@@ -4,22 +4,22 @@ import { Icon } from 'astro-icon';
 const { problem, symptoms, causesSolutions } = Astro.props
 ---
 
-<section class="accordeon__content accordeon__content--hidden">
-        <div class="accordeon__problem grid grid-cols-10 gap-5">
-                <h4 class="col-span-8 py-12 px-14">{problem}</h4>
-                <div class="accordeon__toggle col-span-2 flex justify-center items-center">
+<section class="accordeon__content accordeon__content--hidden col-span-12 md:col-span-11 grid grid-cols-12 md:grid-cols-11">
+        <div class="accordeon__problem col-span-12 sm:col-span-10 md:col-span-9 sm:col-start-3 grid grid-cols-12 sm:grid-cols-10 md:grid-cols-9 gap-5">
+                <h4 class="col-span-9 sm:col-span-7 md:col-span-7 py-12 pl-6 sm:pl-14 pr-4">{problem}</h4>
+                <div class="accordeon__toggle col-span-3 md:col-span-2 flex justify-center items-center">
                         <Icon name="accordeon-plus" />
                         <Icon name="accordeon-minus" />
                 </div>
         </div>
-        <div class="accordeon__information grid grid-cols-10">
-                <div class="col-span-10 grid grid-cols-10 py-12">
-                        <div class="accordeon__symptoms col-span-9 col-start-2 mb-32">
+        <div class="accordeon__information col-span-12 sm:col-span-10 md:col-span-9 sm:col-start-3 grid grid-cols-10 md:grid-cols-9 gap-5">
+                <div class="col-span-10 md:col-span-9 grid grid-cols-10 md:grid-cols-9 gap-5">
+                        <div class="accordeon__symptoms col-span-10 md:col-span-9 md:col-start-2 mb-20 md:mb-24 pl-10 sm:pl-14 lg:pl-24 xl:pl-36 pr-6 sm:pr-14">
                                 <ul class="ml-6">
                                         {symptoms.map(symptom => <li>{symptom}</li>)}
                                 </ul>
                         </div>
-                        <div class="accordeon__causes col-span-9 col-start-2">
+                        <div class="accordeon__causes col-span-10 md:col-span-9 md:col-start-2 pl-10 sm:pl-14 lg:pl-24 xl:pl-36 pr-6 sm:pr-14">
                                 <ul class="ml-6">
                                         {causesSolutions.map(item =>      
                                                         <li>
@@ -38,32 +38,56 @@ const { problem, symptoms, causesSolutions } = Astro.props
         @import "../../style/_variables.scss";
 
         .accordeon__content {
-                background-color: $darkbrown;
-                margin-left: var(--gap);
 
-                &:first-of-type {
-                        border-top-right-radius: 50px;
+                &:first-of-type .accordeon__problem {
+                        @media (min-width: 768px){
+                                border-top-right-radius: 50px;
+                        }
                 }
 
                 &:last-of-type {
-                        border-radius: 0 0 20px 20px;
+                        .accordeon__information {
+                                position:relative;
+
+                                &::after {
+                                        content: "";
+                                        position: absolute;
+                                        top: 100%;
+                                        width: 100%;
+                                        height: 20px;
+                                        background-color: $darkbrown;
+                                        border-radius: 0 0 20px 20px;
+                                }
+                        }
                 }
 
-                &:not(:last-of-type) {
+                &:not(:first-of-type) .accordeon__problem {
                         position: relative;
 
                         &::after {
                                 content: "";
                                 position: absolute;
-                                bottom: 0;
+                                top: 0;
                                 left: 40px;
                                 width: calc(100% - 80px);
                                 height: 2px;
                                 background-color: $white;
+
+                                @media (max-width: 768px){
+                                        left: 20px;
+                                        width: calc(100% - 40px);
+                                }
                         }
                 }
 
                 .accordeon__problem {
+                        
+                        background-color: $darkbrown;
+                        
+                        @media (min-width: 640px){
+                                grid-column-start: 3 !important;
+                        }
+
 
                         &:hover {
                                 h4 {
@@ -85,6 +109,7 @@ const { problem, symptoms, causesSolutions } = Astro.props
                                 font-weight: 700;
                                 position: relative;
                                 letter-spacing: 2px;
+                                line-height: 1.1;
                                 cursor: pointer;
                                 transition: color 0.3s ease-in-out;
 
@@ -97,6 +122,10 @@ const { problem, symptoms, causesSolutions } = Astro.props
                                         top: 1.5rem;
                                         left: 40px;
                                         font-weight: 400;
+
+                                        @media (max-width: 768px){
+                                                left: 20px;
+                                        }
                                 }
                         }
 
@@ -107,6 +136,11 @@ const { problem, symptoms, causesSolutions } = Astro.props
                                         width: 66px;
                                         height: 66px;
                                         cursor: pointer;
+
+                                        @media (max-width: 1024px){
+                                                width: 50px;
+                                                height: 50px;
+                                        }
                                 }
                         }
                 }
@@ -148,9 +182,15 @@ const { problem, symptoms, causesSolutions } = Astro.props
                 }
 
                 .accordeon__information {
+                        
+                        background-color: $darkbrown;
                         display: grid;
                         grid-template-rows: 1fr;
                         transition: grid-template-rows 0.5s ease-in-out;
+
+                        @media (min-width: 640px){
+                                grid-column-start: 3 !important;
+                        }
 
                         > div {
                                 overflow: hidden;
@@ -177,8 +217,16 @@ const { problem, symptoms, causesSolutions } = Astro.props
                                 letter-spacing: 1px;
                                 font-size: 0.75rem;
                                 position: absolute;
-                                top: -3rem;
-                                left: -2.5rem;
+                                top: -2.5rem;
+                                left: 6rem;
+
+                                @media (max-width: 1280px){
+                                        left: 4.5rem;
+                                }
+
+                                @media (max-width: 768px){
+                                        left: 20px;
+                                }
                         }
 
                         ul {
@@ -186,6 +234,10 @@ const { problem, symptoms, causesSolutions } = Astro.props
                                         position: relative;
                                         font-size: 1.375rem;
                                         line-height: 1.3;
+
+                                        @media (max-width: 768px){
+                                                font-size: 1.1rem;
+                                        }
 
                                         + li {
                                                 margin-top: 1.6rem;
@@ -197,6 +249,11 @@ const { problem, symptoms, causesSolutions } = Astro.props
                                                 position: absolute;
                                                 left: -2.5rem;
                                                 top: -4px;
+
+                                                @media (max-width: 1280px){
+                                                        font-size: 1.4rem;
+                                                        top: 0px;
+                                                }
                                         }
                                 }
                         }
@@ -220,10 +277,23 @@ const { problem, symptoms, causesSolutions } = Astro.props
                                 gap: 1rem;
                                 position: relative;
 
+                                @media (max-width: 768px){
+                                        margin-left: 2.5rem;
+                                }
+
                                 &::before {
                                         content: url('/assets/svg/accordeon-solution-arrow.svg');
                                         position: absolute;
                                         left: -1.8rem;
+
+                                        @media (max-width: 1280px){
+                                                transform: scale(0.8);
+                                        }
+
+                                        @media (max-width: 768px){
+                                                transform: scale(0.7);
+                                                top: 4px;
+                                        }
                                 }
                         }
                 }
