--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,11 +7,11 @@ const description = 'Contacteer voor een reparatie in Mortsel';
 <Layout description={description} title={title}>         
     <div class="container grid grid-cols-12 lg:gap-10 auto-rows-auto">
         <div class="col-span-8 flex flex-col">
-            <h1 class="col-span-8 text-4xl sm:text-6xl mb-12">Contacteer ons</h1>
-            <h2 class="col-span-7 mb-12">Interesse in een reparatie? Contacteer ons via het onderstaande formulier of onze contactgegevens</h2>
+            <h1 class="mb-8">Contacteer ons</h1>
+            <h2 class="mb-12">Interesse in een reparatie? Contacteer ons via het onderstaande formulier of onze contactgegevens</h2>
         </div>
-        <div class="col-span-12 grid grid-cols-12">
-            <form class="col-span-7 col-start-2 px-8 py-8">
+        <div class="contact__content col-span-12 grid grid-cols-12">
+            <form class="col-span-12 md:col-span-6 xl:col-span-7 md:col-start-2 p-8 md:px-6 md:py-6 lg:px-8 lg:py-8">
                 <div>
                     <label for="name">Naam</label>
                     <input 
@@ -49,8 +49,8 @@ const description = 'Contacteer voor een reparatie in Mortsel';
                 </div>
                 <button type="submit" class="btn">Verstuur uw bericht</button>
             </form>
-            <aside class="contact-details col-span-4 flex flex-col mt-36 mb-auto p-8">
-                <a class="contact__logo mb-12" href="/">Elektro repair Mortsel</a>
+            <aside class="contact-details col-span-12 md:col-span-5 flex flex-col mt-auto pt-8 pb-12 px-8 md:p-6 lg:p-8">
+                <a class="contact__logo mb-8 md:mb-12" href="/">Elektro repair Mortsel</a>
                 <a class="mb-4" href="tel:0497656751"><i class="fa-solid fa-phone mr-2"></i> 0497 65 67 51</a>
                 <a class="mb-4" href="mailto:info@elektrorepairmortsel.be"><i class="fa-solid fa-envelope mr-2"></i> info@elektrorepairmortsel.be</a> 
                 <div class="flex mb-4 contact__address">
@@ -75,7 +75,34 @@ const description = 'Contacteer voor een reparatie in Mortsel';
 
     form {
         background-color: $darkbrown;
-        border-radius: 15px 75px 25px 75px;
+        border-radius: 15px 75px 0px 75px;
+
+        @media (max-width: 768px) {
+            border-radius: 15px 80px 0px 0px;
+        }
+
+        position: relative;
+
+        &::after {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(60,60,60,0.9);
+            border-radius: 15px 75px 0px 75px;
+            text-align: center;
+            padding-top: 40%;
+            font-size: 1.5rem;
+            z-index: 9;
+            
+            @media (min-width: 768px) {
+                content: "Tijdelijk niet beschikbaar, contacteer ons via de contactgegevens hiernaast";
+            }
+            
+            @media (max-width: 768px) {
+                content: "Tijdelijk niet beschikbaar, contacteer ons via de contactgegevens hieronder";
+            }
 
         > div {
             display: flex;
@@ -90,7 +117,6 @@ const description = 'Contacteer voor een reparatie in Mortsel';
 
         input, textarea {
             padding: 0.8rem 1rem;
-            border-radius: 5px 20px 5px 5px;
             color: $darkbrown;
 
             &:focus {
@@ -98,7 +124,12 @@ const description = 'Contacteer voor een reparatie in Mortsel';
             }
         }
 
+        input {
+            border-radius: 5px 20px 5px 5px;
+        }
+
         textarea {
+            border-radius: 5px 5px 40px 5px;
             resize: none;
             height: 10rem;
         }
@@ -107,16 +138,23 @@ const description = 'Contacteer voor een reparatie in Mortsel';
     .contact-details {
         background-color: lighten($orange, 5%);
         color: $black;
-        border-radius: 0 75px 25px 0;
+        border-radius: 0 75px 75px 0;
         position: relative;
 
-        &::before {
-            content: url('/assets/svg/inverted-radius-orange.svg');
-            position: absolute;
-            bottom: 100%;
-            left: -1px;
-            transform: rotate(180deg);
-            z-index: -1;
+        @media (max-width: 768px) {
+            border-radius: 0 0 25px 80px;
+        }
+
+        
+        @media (min-width: 768px) {
+            &::before {
+                content: url('/assets/svg/inverted-radius-orange.svg');
+                position: absolute;
+                bottom: 100%;
+                left: -1px;
+                transform: rotate(180deg);
+                z-index: -1;
+            }
         }
 
         .contact__logo {
@@ -130,6 +168,10 @@ const description = 'Contacteer voor een reparatie in Mortsel';
         a, p {
             font-size: 1.375rem;
             font-weight: 500;
+
+            @media (max-width: 1280px) {
+                font-size: 1.125rem;
+            }
         }
 
         a:has(i) {
@@ -155,3 +197,32 @@ const description = 'Contacteer voor een reparatie in Mortsel';
         }
     }
 </style>
+
+<script>
+    let emailHasBeenSent = false;
+
+    document.querySelector("form").addEventListener('submit', (e) => {
+        e.preventDefault();
+
+        const formData = new FormData(e.target);
+
+        fetch('send_email.php', {
+            method: 'POST',
+            body: formData
+        })
+        .then(response => response.json())
+        .then(data => {
+            document.querySelector(".contact__content").style.display = "none";
+            document.querySelector("h2").innerText = "Your email has been sent!";
+            const statusMessage = document.getElementById('statusMessage');
+            if (data.success) {
+                document.querySelector("h2").innerText = "Uw e-mail werd verzonden, we contacteren u zo snel mogelijk!";
+            } else {
+                document.querySelector("h2").innerText = "Wegens een fout kon uw e-mail niet verzonden worden via het formulier, gelieve ons te contacteren via info@elektrorepairmortsel.be";
+            }
+        })
+        .catch(error => {
+            console.error('Error:', error);
+        });
+    });
+</script>
