--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -32,8 +32,16 @@ main {
     font-family: $headline-font;
     line-height: 1.2 !important;
     color: $darkbrown;
-    font-size: 4.75rem;
+    font-size: 4rem;
     font-weight: 900;
+
+    @media (max-width: 1280px) {
+      font-size: 3.25rem;
+    }
+
+    @media (max-width: 420px) {
+      font-size: 2.25rem;
+    }
   }
 
   h2 {
@@ -43,14 +51,20 @@ main {
     margin-left: var(--gap);
     line-height: 1.3;
 
-    &::before {
-      content: "";
-      position: absolute;
-      top: 20px;
-      right: calc(100% + 10px);
-      width: 36px;
-      height: 2px;
-      background-color: $black;
+    @media (min-width: 768px) {
+      &::before {
+        content: "";
+        position: absolute;
+        top: 20px;
+        right: calc(100% + 10px);
+        width: 36px;
+        height: 2px;
+        background-color: $black;
+      }
+    }
+
+    @media (max-width: 420px) {
+      font-size: 1.4rem;
     }
 
     span {
@@ -89,6 +103,11 @@ a {
 
   &--gap {
     margin-left: var(--gap);
+  }
+
+  @media (max-width: 420px) {
+    font-size: 1rem;
+    padding: 0.6rem 0.8rem 0.6rem 1.2rem;
   }
 }
 
