--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -92,7 +92,7 @@ const description = 'Contacteer voor een reparatie in Mortsel';
             background-color: rgba(60,60,60,0.9);
             border-radius: 15px 75px 0px 75px;
             text-align: center;
-            padding: 20px 40%;
+            padding: 40% 20px;
             font-size: 1.5rem;
             z-index: 9;
             
